<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main_layoout">

    <TextView android:text="@string/sub_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:id="@+id/acc_sub_title_text"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:text="@string/acc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/acc_title_text"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_below="@+id/acc_sub_title_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/wakeup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/acc_wakeup_text"
        android:textSize="18sp"
        android:layout_below="@+id/acc_title_text"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/acc_wakeup_value_text" />

    <TextView
        android:text="@string/nonwakeup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/acc_nonwakeup_text"
        android:textSize="18sp"
        android:layout_below="@+id/acc_wakeup_text"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/acc_wakeup_text" />

    <TextView
        android:text="@string/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/acc_wakeup_value_text"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/acc_wakeup_text"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/acc_nonwakeup_value_text"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/acc_nonwakeup_text"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/prox_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/prox_title_text"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/acc_nonwakeup_text" />

    <TextView
        android:text="@string/wakeup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/prox_wakeup_text"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/prox_wakeup_value_text"
        android:layout_below="@+id/prox_title_text" /> />

    <TextView
        android:text="@string/nonwakeup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/prox_nonwakeup_text"
        android:textSize="18sp"
        android:layout_below="@+id/prox_wakeup_text"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/prox_wakeup_text" />

    <TextView
        android:text="@string/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/prox_wakeup_value_text"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/prox_wakeup_text"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/prox_nonwakeup_value_text"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/prox_nonwakeup_text"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_friends"
        android:id="@+id/share_friends_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/share_snapback_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_snapback"
        android:id="@+id/share_snapback_button"
        android:layout_above="@+id/share_friends_button"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/prox_nonwakeup_value_text" />

    <TextView
        android:text="@string/api_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/api_text"
        android:textSize="18sp"
        android:layout_below="@+id/prox_nonwakeup_text"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
